@@ -1,3 +1,8 @@
+2005-02-13  Jason Merrill  <jason@redhat.com>
+
+	* cp-demangle.c (__cxa_demangle): Change resolution of ambiguous
+	arguments.
+
 2005-01-11  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>
 
 	* hex.c (hex_value): Group 'unsigned int' together to get correct
